--- a/charter1-2/index.html
+++ b/charter1-2/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css.css">
 </head>
 <body>
-    
+    <div id="header"></div>
     <script src="index.js"></script>
 </body>
 </html>
